--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "require": {
     "php": "^8.2",
-    "slim/slim": "^4.12"
+    "slim/slim": "^4.12",
+    "slim/psr7": "^1.6"
   }
   ,
   "require-dev": {
