Создание сущности: контакт

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "sersid/phonebookbot",
+  "name": "sersid/contact-book-bot",
   "description": "Phone Book Bot",
   "minimum-stability": "stable",
   "license": "proprietary",
