Создание сущности: контакт

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "slim/slim": "^4.12",
     "slim/psr7": "^1.6",
     "ramsey/uuid": "^4.7",
-    "webmozart/assert": "^1.11"
+    "webmozart/assert": "^1.11",
+    "ramsey/collection": "^2.0"
   }
   ,
   "require-dev": {
