--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "webmozart/assert": "^1.11",
     "ramsey/collection": "^2.0",
     "php-di/php-di": "^7.0",
-    "psr/event-dispatcher": "^1.0"
+    "psr/event-dispatcher": "^1.0",
+    "irazasyed/telegram-bot-sdk": "^3.13"
   }
   ,
   "require-dev": {
