--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
   "require-dev": {
     "roave/security-advisories": "dev-latest",
     "phpunit/phpunit": "^10.4",
-    "vimeo/psalm": "^5.15"
+    "vimeo/psalm": "^5.15",
+    "infection/infection": "^0.27.9"
   },
   "autoload": {
     "psr-4": {
@@ -34,6 +35,11 @@
   "autoload-dev": {
     "psr-4": {
       "Tests\\": "tests/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "infection/extension-installer": true
     }
   }
 }
